# phone-mailer

./: .dockerignore  .env.tpl  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
phone_mailer/: Cargo.toml
phone_mailer/src/: api.rs  email.rs  lib.rs  main.rs  sms.rs
